--- a/src/pages/cs2/about.astro
+++ b/src/pages/cs2/about.astro
@@ -9,8 +9,12 @@ const title = 'About - Cities Skylines Modding';
 	<TableOfContents />
 	<section class="pt-12 pb-48 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
-				About
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<p class="mt-4">CSLM is a wiki-style resource for Cities: Skylines I & II asset creation.</p>
 
@@ -22,8 +26,12 @@ const title = 'About - Cities Skylines Modding';
 					theme="externallink"
 				/>
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="credits">
-				Credits
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="credits">
+				<a
+					href="#credits"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Credits</a
+				>
 			</h2>
 			<p class="mt-4">Original Design, development, CS I content: Ronyx69</p>
 			<p class="mt-4">Website remake, development, CS II content: ComradeIntense</p>
