--- a/src/pages/mod/custom-effect-loader.astro
+++ b/src/pages/mod/custom-effect-loader.astro
@@ -12,8 +12,12 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 			Custom Effect Loader
 		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
-				About
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<p class="mt-4">
 				<Link
@@ -31,13 +35,21 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 			</p>
 			<p class="mt-4">This article assumes you are familiar with prop asset creation.</p>
 			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="import-test"
 			>
-				Effect
+				<a
+					href="#import-test"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Effect</a
+				>
 			</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="xml">
-				XML
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="xml">
+				<a
+					href="#xml"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>XML</a
+				>
 			</h3>
 			<p class="mt-4">
 				After subscribing to the mod(or adding it locally) and enabling it, <Link
@@ -57,22 +69,34 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				/>.
 			</p>
 			<h3
-				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="effect-properties"
 			>
-				Effect Properties
+				<a
+					href="#effect-properties"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Effect Properties</a
+				>
 			</h3>
 			<p class="mt-4">If you open the XML file using a text editor, you can adjust various properties.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="name">
-				Name
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="name">
+				<a
+					href="#name"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Name</a
+				>
 			</h4>
 			<p class="mt-4">
 				Name of the light effect which will show up in the asset editor. This must be globally unique so it's a
 				good idea to prefix it with your username. This should not be changed for already used and published
 				effects.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="type">
-				Type
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="type">
+				<a
+					href="#type"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Type</a
+				>
 			</h4>
 			<p class="mt-4">
 				The type of light: <span class="path">Spot</span>, <span class="path">Directional</span>, <span
@@ -80,61 +104,89 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				>, <span class="path">Area</span>.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="intensity"
 			>
-				Intensity
+				<a
+					href="#intensity"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Intensity</a
+				>
 			</h4>
 			<p class="mt-4">
 				The brightness of the light, usually starts from 4 for street lights and up to 8 for floodlights.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="range"
 			>
-				Range
+				<a
+					href="#range"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Range</a
+				>
 			</h4>
 			<p class="mt-4">How far the light effect extends in meters.</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="spotangle"
 			>
-				Spot Angle
+				<a
+					href="#spotangle"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Spot Angle</a
+				>
 			</h4>
 			<p class="mt-4">
 				The angle of how wide or narrow the light beam is for <span class="path">Spot</span> lights.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="spotleaking"
 			>
-				Spot Leaking
+				<a
+					href="#spotleaking"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Spot Leaking</a
+				>
 			</h4>
 			<p class="mt-4">The fog/bloom effect around the light source, usually 0.1 to 0.5.</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="batchedlight"
 			>
-				Batched Light
+				<a
+					href="#batchedlight"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Batched Light</a
+				>
 			</h4>
 			<p class="mt-4">
 				If this is set to true, the light is visible from any distance, must be false for vehicle lights.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="fadestartdistance"
 			>
-				Fade Start Distance
+				<a
+					href="#fadestartdistance"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Fade Start Distance</a
+				>
 			</h4>
 			<p class="mt-4">
 				If batched light is set to false, this controls the distance at which the light effect starts to fade
 				out, usually around 300.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="fadeenddistance"
 			>
-				Fade End Distance
+				<a
+					href="#fadeenddistance"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Fade End Distance</a
+				>
 			</h4>
 			<p class="mt-4">
 				If batched light is set to false, this controls the distance at which the light effect is no longer
@@ -147,10 +199,14 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				/> increases this distance.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="offmin-offmax"
 			>
-				Off Min &amp; Off Max
+				<a
+					href="#offmin-offmax"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Off Min &amp; Off Max</a
+				>
 			</h4>
 			<p class="mt-4">
 				Daylight values under which the lights turn off. For night-only lights usually 0.4, 0.7. If both values
@@ -163,10 +219,14 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				/> to see how many hours during the day the light will be off using which values.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="blinktype"
 			>
-				Blink Type
+				<a
+					href="#blinktype"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Blink Type</a
+				>
 			</h4>
 			<p class="mt-4">
 				If and how the light should blink: <span class="path">None</span>, <span class="path"
@@ -176,24 +236,36 @@ const title = 'Custom Effect Loader - Cities Skylines Modding';
 				>, <span class="path">StrongFade_250_250</span>, <span class="path">Blink_025_025</span>
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="rotationspeed"
 			>
-				Rotation Speed
+				<a
+					href="#rotationspeed"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Rotation Speed</a
+				>
 			</h4>
 			<p class="mt-4">
 				The speed at which the light will rotate around an axis, usually 10 to 50. Rotation works only if
 				batched light is set to false.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="rotationaxis"
 			>
-				Rotation Axis X Y Z
+				<a
+					href="#rotationaxis"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Rotation Axis X Y Z</a
+				>
 			</h4>
 			<p class="mt-4">Rotation axis vector around which the light will rotate.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="publish">
-				Publish
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="publish">
+				<a
+					href="#publish"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Publish</a
+				>
 			</h2>
 			<p class="mt-4">
 				You can publish the asset as usual, but you must include your modified XML file in the content folder.
