--- a/src/pages/mod/detail.astro
+++ b/src/pages/mod/detail.astro
@@ -13,7 +13,11 @@ import { images } from '../../data/imageImports.js';
 		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">Detail</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -49,10 +53,18 @@ import { images } from '../../data/imageImports.js';
 				</div>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
-				Textures
+				<a
+					href="#textures"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Textures</a
+				>
 			</h2>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="diffuse">
-				Diffuse
+				<a
+					href="#diffuse"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Diffuse</a
+				>
 			</h3>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -74,13 +86,21 @@ import { images } from '../../data/imageImports.js';
 				</div>
 			</div>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="color">
-				Color
+				<a
+					href="#color"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Color</a
+				>
 			</h3>
 			<h4
 				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="props"
 			>
-				Props
+				<a
+					href="#props"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Props</a
+				>
 			</h4>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -105,14 +125,22 @@ import { images } from '../../data/imageImports.js';
 				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="trees"
 			>
-				Trees
+				<a
+					href="#trees"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Trees</a
+				>
 			</h4>
 			<p class="mt-4">
 				For trees, the color map works as usual - the black parts define where the "leaves" are. Using the
 				Detail mod, these are also the parts which will be affected by the color variation.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
-				Script
+				<a
+					href="#script"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Script</a
+				>
 			</h2>
 			<p class="mt-4">
 				The scripts can be found <Link
@@ -126,7 +154,11 @@ import { images } from '../../data/imageImports.js';
 				The mod is not required for creating and saving the assets, only for loading and using them ingame.
 			</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="prop">
-				Prop
+				<a
+					href="#prop"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Prop</a
+				>
 			</h3>
 			<p class="mt-4">The prop script has some variables, such as LOD distance and max render distance.</p>
 			<p class="mt-4">
@@ -137,7 +169,11 @@ import { images } from '../../data/imageImports.js';
 				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="source-files"
 			>
-				Source Files
+				<a
+					href="#source-files"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Source Files</a
+				>
 			</h2>
 			<p class="mt-4">
 				You can download all the source files of the official Detail Nature prop &amp; tree pack.
