--- a/src/pages/shader/proprotating.astro
+++ b/src/pages/shader/proprotating.astro
@@ -12,39 +12,63 @@ const title = 'Prop Rotating Shader - Cities Skylines Modding';
 			Prop Rotating Shader
 		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">
-				About
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<p class="mt-4">The PropRotating shader can be used to create props which have rotating parts or clocks.</p>
 			<p class="mt-4">This article assumes you are familiar with regular prop asset creation.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="textures">
-				Textures
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
+				<a
+					href="#textures"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Textures</a
+				>
 			</h2>
 			<p class="mt-4">The textures work just like they would for any normal prop.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="mesh">
-				Mesh
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh">
+				<a
+					href="#mesh"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh</a
+				>
 			</h2>
 			<h3
-				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="vertex-paint"
 			>
-				Vertex Paint
+				<a
+					href="#vertex-paint"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Vertex Paint</a
+				>
 			</h3>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="single-rotating-part"
 			>
-				Single Rotating Part
+				<a
+					href="#single-rotating-part"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Single Rotating Part</a
+				>
 			</h4>
 			<p class="mt-4">
 				If you are using the script for a single rotating part, the rotating part should be vertex painted black
 				and the rest should be vertex painted white.
 			</p>
 			<h4
-				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="multiple-rotating-parts-or-clocks"
 			>
-				Multiple Rotating Parts or Clocks
+				<a
+					href="#multiple-rotating-parts-or-clocks"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Multiple Rotating Parts or Clocks</a
+				>
 			</h4>
 			<p class="mt-4">
 				If you are using the script for multiple rotating parts, you can have up to 4 different rotating parts.
@@ -60,12 +84,20 @@ const title = 'Prop Rotating Shader - Cities Skylines Modding';
 				<li class="mt-4">Part 2 - G=128<br /></li>
 				<li class="mt-4">Part 3 - G=192</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="lod">
-				LOD
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="lod">
+				<a
+					href="#lod"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>LOD</a
+				>
 			</h2>
 			<p class="mt-4">The LOD can't rotate, it's static just like any regular prop LOD.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="scripts">
-				Scripts
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="scripts">
+				<a
+					href="#scripts"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Scripts</a
+				>
 			</h2>
 			<p class="mt-4">
 				The script for a single rotating part can be found <Link
@@ -83,25 +115,41 @@ const title = 'Prop Rotating Shader - Cities Skylines Modding';
 			<p class="mt-4">
 				Keep in mind that when dealing with XYZ coordinates - the Y coordinate ingame represents height.
 			</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="axis">
-				Axis
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="axis">
+				<a
+					href="#axis"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Axis</a
+				>
 			</h3>
 			<p class="mt-4">Around which axis the rotation happens. Off-axis rotation is not possible.</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="pivot">
-				Pivot
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="pivot">
+				<a
+					href="#pivot"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Pivot</a
+				>
 			</h3>
 			<p class="mt-4">The center of the rotation.</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="speed">
-				Speed
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="speed">
+				<a
+					href="#speed"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Speed</a
+				>
 			</h3>
 			<p class="mt-4">
 				How many times per minute the rotation happens. Negative values reverse the rotation direction.
 			</p>
 			<h3
-				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="speed-for-clocks"
 			>
-				Speed for Clocks
+				<a
+					href="#speed-for-clocks"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Speed for Clocks</a
+				>
 			</h3>
 			<p class="mt-4">
 				When the clock parameter is set to 1, the speed defines how many times per day the part will rotate.
