--- a/src/pages/shader/rotors-vehicle.astro
+++ b/src/pages/shader/rotors-vehicle.astro
@@ -15,7 +15,11 @@ import { images } from '../../data/imageImports.js';
 		</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -50,10 +54,18 @@ import { images } from '../../data/imageImports.js';
 				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="limitations"
 			>
-				Limitations
+				<a
+					href="#limitations"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Limitations</a
+				>
 			</h2>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="trailers">
-				Trailers
+				<a
+					href="#trailers"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Trailers</a
+				>
 			</h3>
 			<p class="mt-4">
 				This technique is currently not applicable for trailers, because they recalculate vertex colors when the
@@ -63,7 +75,11 @@ import { images } from '../../data/imageImports.js';
 				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="suspension"
 			>
-				Suspension
+				<a
+					href="#suspension"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Suspension</a
+				>
 			</h3>
 			<p class="mt-4">
 				The rotors shader will not move together with the vehicle suspension, so <Link
@@ -74,13 +90,21 @@ import { images } from '../../data/imageImports.js';
 				/> should be set to 0.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh">
-				Mesh
+				<a
+					href="#mesh"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh</a
+				>
 			</h2>
 			<h3
 				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="Vertex Count"
 			>
-				Vertex Count
+				<a
+					href="#Vertex Count"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Vertex Count</a
+				>
 			</h3>
 			<p class="mt-4">
 				Each sub-mesh is limited to 32 vertices, this is because vertex paint is used to define each spinning
@@ -90,7 +114,11 @@ import { images } from '../../data/imageImports.js';
 				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="vertex-normals"
 			>
-				Vertex Normals
+				<a
+					href="#vertex-normals"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Vertex Normals</a
+				>
 			</h3>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -118,7 +146,11 @@ import { images } from '../../data/imageImports.js';
 				</div>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
-				Script
+				<a
+					href="#script"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Script</a
+				>
 			</h2>
 			<p class="mt-4">
 				To change the shader and automatically calculate vertex paint and tire parameters, use <Link
@@ -129,7 +161,11 @@ import { images } from '../../data/imageImports.js';
 				/>.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
-				Textures
+				<a
+					href="#textures"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Textures</a
+				>
 			</h2>
 			<p class="mt-4">
 				Everything is the same way as for regular rotors shader props and buildings, except for the alpha map.
