--- a/src/pages/shader/vehicle-wheels.astro
+++ b/src/pages/shader/vehicle-wheels.astro
@@ -15,7 +15,11 @@ import { images } from '../../data/imageImports.js';
 		</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a
+					href="#about"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -50,27 +54,47 @@ import { images } from '../../data/imageImports.js';
 				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="mesh-vertex-paint"
 			>
-				Mesh Vertex Paint
+				<a
+					href="#mesh-vertex-paint"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh Vertex Paint</a
+				>
 			</h2>
 			<h3
 				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="non-rotating-parts"
 			>
-				Non-rotating Parts
+				<a
+					href="#non-rotating-parts"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Non-rotating Parts</a
+				>
 			</h3>
 			<p class="mt-4">The parts which don't rotate should be blue(RGB 0,0,255).</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="wheels">
-				Wheels
+				<a
+					href="#wheels"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Wheels</a
+				>
 			</h3>
 			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="red">
-				Red
+				<a
+					href="#red"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Red</a
+				>
 			</h4>
 			<p class="mt-4">The red channel defines what is a wheel and what isn't, therefore it should be 255.</p>
 			<h4
 				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
 				id="green"
 			>
-				Green
+				<a
+					href="#green"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Green</a
+				>
 			</h4>
 			<p class="mt-4">
 				The green channel determines which of the tire parameters (as they will be defined in the script) the
@@ -78,14 +102,26 @@ import { images } from '../../data/imageImports.js';
 				will use tire parameter 2 and so on.
 			</p>
 			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="blue">
-				Blue
+				<a
+					href="#blue"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Blue</a
+				>
 			</h4>
 			<p class="mt-4">The blue channel has no known effect, so it can stay at 255.</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="import">
-				Import
+				<a
+					href="#import"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Import</a
+				>
 			</h2>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="prop">
-				Prop
+				<a
+					href="#prop"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Prop</a
+				>
 			</h3>
 			<p class="mt-4">
 				Because the game recalculates vertex colors when importing vehicle meshes, it's necessary to import your
@@ -93,11 +129,19 @@ import { images } from '../../data/imageImports.js';
 				file name and the asset name. Once it's saved, reload the game.
 			</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="vehicle">
-				Vehicle
+				<a
+					href="#vehicle"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Vehicle</a
+				>
 			</h3>
 			<p class="mt-4">Once the game is reloaded, import your vehicle as usual.</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
-				Script
+				<a
+					href="#script"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Script</a
+				>
 			</h2>
 			<p class="mt-4">
 				The script can be found <Link
@@ -108,14 +152,22 @@ import { images } from '../../data/imageImports.js';
 				/>. It will copy the vertex paint from the prop to the vehicle, and set tire parameters.
 			</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="prop-name">
-				Prop Name
+				<a
+					href="#prop-name"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Prop Name</a
+				>
 			</h3>
 			<p class="mt-4">The name of the prop you imported before. Formatted as "filename.Asset Name_Data".</p>
 			<h3
 				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
 				id="tire-parameter-vectors"
 			>
-				Tire Parameter Vectors
+				<a
+					href="#tire-parameter-vectors"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Tire Parameter Vectors</a
+				>
 			</h3>
 			<p class="mt-4">
 				Each vector describes the pivot coordinates of the wheel, the point around which that wheel will spin.
