--- a/src/pages/tutorials.astro
+++ b/src/pages/tutorials.astro
@@ -13,8 +13,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 			Tutorials
 		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="generic">
-				Generic
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="generic">
+				<a
+					href="#generic"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Generic</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -42,8 +46,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="buildings">
-				Buildings
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="buildings">
+				<a
+					href="#buildings"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Buildings</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -63,8 +71,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="props">
-				Props
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="props">
+				<a
+					href="#props"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Props</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -76,8 +88,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="vehicles">
-				Vehicles
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="vehicles">
+				<a
+					href="#vehicles"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Vehicles</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -90,10 +106,14 @@ const description = 'Tutorials for Cities Skylines Modding.';
 				</li>
 			</ul>
 			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="publishing"
 			>
-				Publishing
+				<a
+					href="#publishing"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Publishing</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -113,8 +133,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="lod">
-				LOD
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="lod">
+				<a
+					href="#lod"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>LOD</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -134,8 +158,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="modtools">
-				ModTools
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="modtools">
+				<a
+					href="#modtools"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>ModTools</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -155,8 +183,12 @@ const description = 'Tutorials for Cities Skylines Modding.';
 					/>
 				</li>
 			</ul>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="shaders">
-				Shaders
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="shaders">
+				<a
+					href="#shaders"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Shaders</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -169,10 +201,14 @@ const description = 'Tutorials for Cities Skylines Modding.';
 				</li>
 			</ul>
 			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="mod-specific"
 			>
-				Mod-specific
+				<a
+					href="#mod-specific"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mod-specific</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
@@ -209,10 +245,14 @@ const description = 'Tutorials for Cities Skylines Modding.';
 				</li>
 			</ul>
 			<h2
-				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
 				id="mod-development"
 			>
-				Mod Development
+				<a
+					href="#mod-development"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mod Development</a
+				>
 			</h2>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">
