--- a/src/pages/decruft.astro
+++ b/src/pages/decruft.astro
@@ -6,11 +6,12 @@ const title = 'Output Log Decrufter - Cities Skylines Modding';
 <MainLayout title={title}>
 	<section class="pt-12 pb-48 sm:ml-64 text-lg text-hit-gray-500">
 		<div class="content">
-			<h2
-				class="border-b-2 border-hit-gray-600 xl:mt-12 pb-8 text-4xl font-medium text-hit-gray-400"
-				id="decruft"
-			>
-				Output Log Decrufter
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="decruft">
+				<a
+					href="#decruft"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Output Log Decrufter</a
+				>
 			</h2>
 			<p class="mt-4">
 				A tool made by aubergine18 which attempts to extract the relevant parts of an output log.
