--- a/src/pages/dump.astro
+++ b/src/pages/dump.astro
@@ -12,69 +12,68 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 <MainLayout title={title}>
 	<TableOfContents />
 	<section class="pt-12 pb-48 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
-		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
-			Dump & Extract Assets
-		</h1>
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">Dump & Extract Assets</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="modtools">
-				ModTools
+				<a href="#modtools" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>ModTools</a
+				>
 			</h2>
 			<p class="mt-4">
-				This assumes you are familiar with <Link
-					classes=""
-					href="/modtools/"
-					text="ModTools usage"
-					theme="internallink"
-				/>. For buildings and vehicles, you can simply click on it ingame and press dump asset there.
+				This assumes you are familiar with <Link classes="" href="/modtools/" text="ModTools usage" theme="internallink" />. For
+				buildings and vehicles, you can simply click on it ingame and press dump asset there.
 			</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="tool-controller"
-			>
-				Tool Controller
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="tool-controller">
+				<a
+					href="#tool-controller"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Tool Controller</a
+				>
 			</h3>
 			<p class="mt-4">
-				You can click on the desired item in the menu as if you are about to plop it, and then find the prefab
-				in <span class="path"
+				You can click on the desired item in the menu as if you are about to plop it, and then find the prefab in <span class="path"
 					>Scene Explorer &gt; Tool Controller &gt; BuildingTool / PropTool / TreeTool / NetTool &gt; m_prefab</span
-				>. If you preview it, you can dump it there. Alternatively, inside the prefab you can find the m_mesh
-				and textures inside m_material and dump those.
+				>. If you preview it, you can dump it there. Alternatively, inside the prefab you can find the m_mesh and textures inside
+				m_material and dump those.
 			</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="sub-meshes-sub-buildings"
-			>
-				Sub-meshes &amp; Sub-buildings
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="sub-meshes-sub-buildings">
+				<a
+					href="#sub-meshes-sub-buildings"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Sub-meshes &amp; Sub-buildings</a
+				>
 			</h4>
 			<p class="mt-4">
-				If a building has sub-buildings or sub-meshes, those can be found inside the prefab in <span
-					class="path">m_subBuildings</span
+				If a building has sub-buildings or sub-meshes, those can be found inside the prefab in <span class="path"
+					>m_subBuildings</span
 				> and <span class="path">m_subMeshes</span>.
 			</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="network-segments-nodes"
-			>
-				Network Segments &amp; Nodes
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="network-segments-nodes">
+				<a
+					href="#network-segments-nodes"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Network Segments &amp; Nodes</a
+				>
 			</h4>
 			<p class="mt-4">
 				For networks, the nodes and segments can be found inside the prefab in <span class="path">m_nodes</span>
-				 and <span class="path">m_segments</span>. There you can find the <span class="path">m_segmentMesh</span
-				>
+				 and <span class="path">m_segments</span>. There you can find the <span class="path">m_segmentMesh</span>
 				 and <span class="path">m_segmentMaterial</span> which contains the textures.
 			</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="network-elevations"
-			>
-				Network Elevations
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="network-elevations">
+				<a
+					href="#network-elevations"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Network Elevations</a
+				>
 			</h4>
 			<p class="mt-4">Network elevations such as bridge and tunnel can be found inside the prefab in m_netAI.</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="prefab-collections"
-			>
-				Prefab Collections
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="prefab-collections">
+				<a
+					href="#prefab-collections"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Prefab Collections</a
+				>
 			</h3>
 			<p class="mt-4">
 				To find prefabs when you can't click on them ingame or in the menu, <Link
@@ -84,11 +83,12 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 					theme="internallink"
 				/>.
 			</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="format-conversion-script"
-			>
-				Format Conversion Script
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="format-conversion-script">
+				<a
+					href="#format-conversion-script"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Format Conversion Script</a
+				>
 			</h3>
 			<p class="mt-4">
 				ModTools can't dump some textures because of their format, in this case, <Link
@@ -98,21 +98,23 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 					theme="externallink"
 				/> to convert the texture, which ModTools can then dump.
 			</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="protected-assets"
-			>
-				Protected Assets
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="protected-assets">
+				<a
+					href="#protected-assets"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Protected Assets</a
+				>
 			</h3>
 			<p class="mt-4">
-				Some meshes or textures are not readable, and therefore ModTools can't dump them, in that case, you
-				remember the name of the mesh or material and use one of the other methods.
+				Some meshes or textures are not readable, and therefore ModTools can't dump them, in that case, you remember the name of the
+				mesh or material and use one of the other methods.
 			</p>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="unity-assets-bundle-extractor"
-			>
-				Unity Assets Bundle Extractor
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="unity-assets-bundle-extractor">
+				<a
+					href="#unity-assets-bundle-extractor"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Unity Assets Bundle Extractor</a
+				>
 			</h2>
 			<p class="mt-4">
 				<Link
@@ -121,47 +123,44 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 					text="UABE is a tool"
 					theme="externallink"
 				/>
-				 which can open .assets files which are located in the Cities_Data folder which is in the game folder.
-				Most vanilla assets can be found in the sharedassets11 file, although assets from DLCs can be found in
-				files with a higher number. It can export meshes as OBJ and textures as PNG.
+				 which can open .assets files which are located in the Cities_Data folder which is in the game folder. Most vanilla assets
+				can be found in the sharedassets11 file, although assets from DLCs can be found in files with a higher number. It can export
+				meshes as OBJ and textures as PNG.
 			</p>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="utinyripper"
-			>
-				uTinyRipper
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="utinyripper">
+				<a
+					href="#utinyripper"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">uTinyRipper</a
+				>
 			</h2>
 			<p class="mt-4">
-				<Link
-					classes=""
-					href="https://github.com/mafaca/UtinyRipper"
-					text="uTinyRipper is a tool"
-					theme="externallink"
-				/> which can extract an entire .assets file.
+				<Link classes="" href="https://github.com/mafaca/UtinyRipper" text="uTinyRipper is a tool" theme="externallink" /> which can
+				extract an entire .assets file.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="crper">
-				Crper
+				<a href="#crper" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Crper</a
+				>
 			</h2>
 			<p class="mt-4">
 				<Link classes="" href="http://unera.se/crper/" text="Crper is a web-based tool" theme="externallink" />
 				 which can read .crp files and extract meshes and textures.
 			</p>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="texture-correction"
-			>
-				Texture Correction &amp; Splitting
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="texture-correction">
+				<a
+					href="#texture-correction"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Texture Correction &amp; Splitting</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						Depending on how the textures were extracted, they may need to be gamma corrected and split into
-						multiple textures.
+						Depending on how the textures were extracted, they may need to be gamma corrected and split into multiple textures.
 					</p><p class="mt-4">
-						ACI textures contain alpha, color, and illumination maps combined into a single texture.
-						Similarly, XYS textures contain normal and specular maps, and APR textures, which are used for
-						roads, contain alpha, pavement, and road maps. These combined textures are sometimes gamma
-						lifted (brighter) so they require a 0.45 gamma adjustment.
+						ACI textures contain alpha, color, and illumination maps combined into a single texture. Similarly, XYS textures
+						contain normal and specular maps, and APR textures, which are used for roads, contain alpha, pavement, and road
+						maps. These combined textures are sometimes gamma lifted (brighter) so they require a 0.45 gamma adjustment.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/dump/xysgamma.jpg" target="_blank">
@@ -178,16 +177,18 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 			</div>
 		</div>
 		<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="splitting">
-			Splitting
+			<a href="#splitting" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+				>Splitting</a
+			>
 		</h3>
 		<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 			<div class="lg:w-2/3">
 				<p>
-					For combined textures such as ACI, XYS, APR - each RGB channel contains one of the maps. The
-					channels should be separated and some channels need to be inverted as well.
+					For combined textures such as ACI, XYS, APR - each RGB channel contains one of the maps. The channels should be
+					separated and some channels need to be inverted as well.
 				</p><p class="mt-4">
-					You can download Photoshop actions which will gamma correct, split, and invert dumped ACI and XYS
-					textures automatically.
+					You can download Photoshop actions which will gamma correct, split, and invert dumped ACI and XYS textures
+					automatically.
 				</p>
 			</div><div class="lg:w-1/3">
 				<a href="/images/dump/acisplit.jpg" target="_blank">
@@ -211,11 +212,11 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 			/>
 		</div>
 		<!-- ?Video Section -->
-		<h2
-			id="relevant-videos"
-			class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-		>
-			Relevant Videos
+		<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="relevant-videos">
+			<a
+				href="#relevant-videos"
+				title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Relevant Videos</a
+			>
 		</h2>
 		<ul class="text-lg mt-4 text-hit-gray-500 list-inside">
 			<li>
@@ -230,12 +231,7 @@ import acisplit from '../../public/images/dump/acisplit.jpg';
 			</li>
 			<li>
 				<h3 class="mt-4" id="dump-road-meshes-modtools">
-					<Link
-						href="https://youtube.com/watch?v=hEidZ_LsTkA"
-						theme="youtube"
-						text="Dump Road Meshes with ModTools"
-						classes=""
-					/>
+					<Link href="https://youtube.com/watch?v=hEidZ_LsTkA" theme="youtube" text="Dump Road Meshes with ModTools" classes="" />
 				</h3>
 			</li>
 		</ul>
