--- a/src/pages/mod/ploppable-asphalt.astro
+++ b/src/pages/mod/ploppable-asphalt.astro
@@ -10,12 +10,12 @@ import { images } from '../../data/imageImports.js';
 <MainLayout title={title}>
 	<TableOfContents />
 	<section class="pt-12 pb-48 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
-		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
-			Ploppable Asphalt+
-		</h1>
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">Ploppable Asphalt+</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a href="#about" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
@@ -25,9 +25,9 @@ import { images } from '../../data/imageImports.js';
 							href="https://steamcommunity.com/sharedfiles/filedetails/?id=881291183&searchtext=ploppable+asphalt"
 							text="The Ploppable Asphalt + (PA+) mod"
 							theme="externallink"
-						/> can be used to create props which use network shaders to display map theme textures such as
-						asphalt, pavement, grass, gravel, cliff. You can also use diffuse, alpha, normal, specular maps
-						depending on which exact shader you use. The props are also decal compatible.
+						/> can be used to create props which use network shaders to display map theme textures such as asphalt, pavement,
+						grass, gravel, cliff. You can also use diffuse, alpha, normal, specular maps depending on which exact shader you
+						use. The props are also decal compatible.
 					</p><p class="mt-4">This article assumes you are familiar with regular prop asset creation.</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/mod/ploppable/1.jpeg" target="_blank">
@@ -44,7 +44,9 @@ import { images } from '../../data/imageImports.js';
 				</div>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
-				Script
+				<a href="#script" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Script</a
+				>
 			</h2>
 			<p class="mt-4">
 				To convert a prop for use with PA+ mod, you need to run <Link
@@ -59,10 +61,7 @@ import { images } from '../../data/imageImports.js';
 					theme="externallink"
 				/> console <span class="key">F7</span>.
 			</p>
-			<p class="mt-4">
-				There are 3 different network shaders to choose from. In the official packs for PA+ they are used like
-				this:
-			</p>
+			<p class="mt-4">There are 3 different network shaders to choose from. In the official packs for PA+ they are used like this:</p>
 			<ul class="mt-4 list-disc list-inside">
 				<li class="mt-4">RoadBridge for asphalt and pavement<br /></li>
 				<li class="mt-4">Road for grass and cliff<br /></li>
@@ -71,49 +70,47 @@ import { images } from '../../data/imageImports.js';
 			<div class="flex items-start justify-start gap-2 mt-6">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
-					class="w-8 h-8 text-hoverlink flex-shrink-0"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="w-6 h-6"
-				>
+					xml:space="preserve"
+					class="w-8 h-8 text-hoverlink flex-shrink-0 fill-hoverlink"
+					viewBox="0 0 32 32">
 					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"
+						d="M16 4C9.4 4 4 9.4 4 16s5.4 12 12 12 12-5.4 12-12S22.6 4 16 4zm0 22c-5.5 0-10-4.5-10-10S10.5 6 16 6s10 4.5 10 10-4.5 10-10 10zm0-12c-.6 0-1 .4-1 1v6c0 .6.4 1 1 1s1-.4 1-1v-6c0-.6-.4-1-1-1zm0-4c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1z"
 					></path>
 				</svg>
 				<p class="italic">
 					<em>
-						The prop will not appear correctly inside the asset editor, as the PA+ mod hasn't processed it,
-						that only happens when you load the game normally.
+						The prop will not appear correctly inside the asset editor, as the PA+ mod hasn't processed it, that only happens
+						when you load the game normally.
 					</em>
 				</p>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh">
-				Mesh
+				<a href="#mesh" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh</a
+				>
 			</h2>
 			<p class="mt-4">
-				It's highly recommended to use only completely flat meshes, as the normals will not appear correctly
-				when the prop is rotated - the lighting will "follow" the rotation.
+				It's highly recommended to use only completely flat meshes, as the normals will not appear correctly when the prop is
+				rotated - the lighting will "follow" the rotation.
 			</p>
 			<p class="mt-4">
-				There are size limitations depending on the shader, for example - the regular road shader doesn't appear
-				correctly for a 32x32 meter prop.
+				There are size limitations depending on the shader, for example - the regular road shader doesn't appear correctly for a
+				32x32 meter prop.
 			</p>
 			<p class="mt-4">
-				To avoid Z-fighting for props placed on the ground, the mesh should be slightly raised, the official
-				packs for PA+ are 2 cm above ground for main meshes and 5 cm above ground for LOD meshes.
+				To avoid Z-fighting for props placed on the ground, the mesh should be slightly raised, the official packs for PA+ are 2 cm
+				above ground for main meshes and 5 cm above ground for LOD meshes.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
-				Textures
+				<a href="#textures" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Textures</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						The textures you need to import are similar to regular props, but the PA+ mod will convert the
-						textures for use on network shaders.
+						The textures you need to import are similar to regular props, but the PA+ mod will convert the textures for use on
+						network shaders.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/mod/ploppable/2.jpeg" target="_blank">
@@ -126,63 +123,62 @@ import { images } from '../../data/imageImports.js';
 							class="w-full h-auto"
 						/></a
 					><p class="explanation">
-						Comparison between RoadBridge (left), TrainBridge (middle), Road (right) shaders. Imported
-						textures are shown at the bottom.
+						Comparison between RoadBridge (left), TrainBridge (middle), Road (right) shaders. Imported textures are shown at the
+						bottom.
 					</p>
 				</div>
 			</div>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="diffuse-d">
-				Diffuse
+				<a href="#diffuse-d" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Diffuse</a
+				>
 			</h3>
 			<p class="mt-4">Just like any diffuse texture</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="alpha-a">
-				Alpha
+				<a href="#alpha-a" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Alpha</a
+				>
 			</h3>
 			<p class="mt-4">
-				Works like a regular alpha map for RoadBridge and TrainBridge but displays grass when black on the Road
-				shader.
+				Works like a regular alpha map for RoadBridge and TrainBridge but displays grass when black on the Road shader.
 			</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="color-c">
-				Color
+				<a href="#color-c" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Color</a
+				>
 			</h3>
 			<p class="mt-4">White will display pavement for RoadBridge, gravel for TrainBridge, cliff for Road.</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="illumination-i"
-			>
-				Illumination
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="illumination-i">
+				<a
+					href="#illumination-i"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Illumination</a
+				>
 			</h3>
 			<p class="mt-4">White displays asphalt on all 3 shaders.</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="normal-n">
-				Normal
+				<a href="#normal-n" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Normal</a
+				>
 			</h3>
-			<p class="mt-4">
-				Works just like any normal map for RoadBridge and TrainBridge, but doesn't work at all for Road.
-			</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="specular-s"
-			>
-				Specular
+			<p class="mt-4">Works just like any normal map for RoadBridge and TrainBridge, but doesn't work at all for Road.</p>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="specular-s">
+				<a href="#specular-s" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Specular</a
+				>
 			</h3>
 			<p class="mt-4">Works just like any specular map.</p>
 		</div>
 		<!-- ?Video Section -->
-		<h2
-			id="relevant-videos"
-			class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-		>
-			Relevant Videos
+		<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="relevant-videos">
+			<a
+				href="#relevant-videos"
+				title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Relevant Videos</a
+			>
 		</h2>
 		<ul class="text-lg mt-4 text-hit-gray-500 list-inside">
 			<li>
 				<h3 class="mt-4" id="pa-props-explanation">
-					<Link
-						href="https://www.youtube.com/watch?v=HTNiAlk9Phk"
-						theme="youtube"
-						text="PA+ Props Explanation"
-						classes=""
-					/>
+					<Link href="https://www.youtube.com/watch?v=HTNiAlk9Phk" theme="youtube" text="PA+ Props Explanation" classes="" />
 				</h3>
 			</li>
 		</ul>
