--- a/src/pages/normal-maps.astro
+++ b/src/pages/normal-maps.astro
@@ -10,41 +10,41 @@ import { images } from '../data/imageImports.js';
 <MainLayout title={title}>
 	<TableOfContents />
 	<section class="pt-12 pb-48 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
-		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
-			Normal Maps
-		</h1>
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">Normal Maps</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a href="#about" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<p class="mt-4">
-				This article describes how to create correct normal maps in different situations, and potential problems
-				while generating or importing them ingame.
+				This article describes how to create correct normal maps in different situations, and potential problems while generating or
+				importing them ingame.
 			</p>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="generation"
-			>
-				Generation
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="generation">
+				<a href="#generation" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Generation</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						Before you decide if you need to invert one of the normal map channels, you need to make sure
-						the normal map generator you are using isn't inverting it by default. Some normal map generators
-						have settings for inverting the red(x) and green(y) channels, but some of them invert the red
-						channel by default.
-					</p><p class="mt-4">
-						A regular normal map with no inversions looks as if it's lit from the top right - that means the
-						red channel looks as if it's lit from the right, but the green channel looks as if it's lit from
-						the top. That means it appears to be lit from the positive x and y directions which is <Link
+						Before you decide if you need to invert one of the normal map channels, you need to make sure the normal map
+						generator you are using isn't inverting it by default. Some normal map generators have settings for inverting the
+						red(x) and green(y) channels, but some of them invert the red channel by default.
+					</p>
+					<p class="mt-4">
+						A regular normal map with no inversions looks as if it's lit from the top right - that means the red channel looks
+						as if it's lit from the right, but the green channel looks as if it's lit from the top. That means it appears to be
+						lit from the positive x and y directions which is <Link
 							classes=""
 							href="https://en.wikipedia.org/wiki/Normal_mapping#How_it_works"
 							text="the normal map standard"
 							theme="externallink"
 						/>.
 					</p>
-				</div><div class="lg:w-1/3">
+				</div>
+				<div class="lg:w-1/3">
 					<a href="/images/normalmaps/regularnm.png" target="_blank">
 						<Picture
 							width={images.regularnm.width / 2}
@@ -55,42 +55,36 @@ import { images } from '../data/imageImports.js';
 							class="w-full h-auto"
 						/></a
 					><p class="explanation">
-						A regular normal map without any inverted channels and its red and green channels shown
-						separately. The letters are supposed to look extruded in this example.
+						A regular normal map without any inverted channels and its red and green channels shown separately. The letters are
+						supposed to look extruded in this example.
 					</p>
 				</div>
 			</div>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="mesh-import-rotation"
-			>
-				Mesh Import Rotation
+
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh-import-rotation">
+				<a
+					href="#mesh-import-rotation"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh Import Rotation</a
+				>
 			</h2>
 			<p class="mt-4">
-				The rotation feature in the asset editor mesh importer is broken - it produces incorrect tangents, which
-				will make normal maps appear incorrectly or not at all depending on the orientation and uv mapping of
-				each face.
+				The rotation feature in the asset editor mesh importer is broken - it produces incorrect tangents, which will make normal
+				maps appear incorrectly or not at all depending on the orientation and uv mapping of each face.
 			</p>
 			<div class="flex items-start justify-start gap-2 mt-6">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
-					class="w-8 h-8 text-hoverlink flex-shrink-0"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="w-6 h-6"
+					xml:space="preserve"
+					class="w-8 h-8 text-hoverlink flex-shrink-0 fill-hoverlink"
+					viewBox="0 0 32 32"
+					><path
+						d="M16 4C9.4 4 4 9.4 4 16s5.4 12 12 12 12-5.4 12-12S22.6 4 16 4zm0 22c-5.5 0-10-4.5-10-10S10.5 6 16 6s10 4.5 10 10-4.5 10-10 10zm0-12c-.6 0-1 .4-1 1v6c0 .6.4 1 1 1s1-.4 1-1v-6c0-.6-.4-1-1-1zm0-4c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1z"
+					></path></svg
 				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"
-					></path>
-				</svg>
 				<p class="italic">
 					<em>
-						If you would like to use the rotation feature without breaking the tangents and normal maps, use
-						the <Link
+						If you would like to use the rotation feature without breaking the tangents and normal maps, use the <Link
 							classes=""
 							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1518485094"
 							text="Mesh Import Rotation Tangents Fix mod"
@@ -100,42 +94,41 @@ import { images } from '../data/imageImports.js';
 				</p>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="assets">
-				Assets
+				<a href="#assets" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Assets</a
+				>
 			</h2>
 			<p class="mt-4">
-				For regular assets such as buildings, props, vehicles, trees, and citizens, the normal map works
-				correctly with no inverted channels, according to the standard described above.
+				For regular assets such as buildings, props, vehicles, trees, and citizens, the normal map works correctly with no inverted
+				channels, according to the standard described above.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="networks">
-				Networks
+				<a href="#networks" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Networks</a
+				>
 			</h2>
 			<p class="mt-4">
-				For faces which are vertex painted magenta the normal map always works just like for any normal asset,
-				as described above.
+				For faces which are vertex painted magenta the normal map always works just like for any normal asset, as described above.
 			</p>
 			<p class="mt-4">
-				But for faces which are not vertex painted magenta (that means they use the automatic tiling as networks
-				usually do) the green channel usually needs to be inverted.
+				But for faces which are not vertex painted magenta (that means they use the automatic tiling as networks usually do) the
+				green channel usually needs to be inverted.
 			</p>
 			<p class="mt-4">
-				If you are creating a network using an asymmetric mesh, you would use the invert flag for the segment
-				mesh to appear continuous and not flip every other segment, this will result in the normal map green
-				channel being inverted for every other segment. The solution for that is to have 2 different segment
-				meshes, one of which would have a flipped mesh or a flipped normal map, depending on the flags it has.
+				If you are creating a network using an asymmetric mesh, you would use the invert flag for the segment mesh to appear
+				continuous and not flip every other segment, this will result in the normal map green channel being inverted for every other
+				segment. The solution for that is to have 2 different segment meshes, one of which would have a flipped mesh or a flipped
+				normal map, depending on the flags it has.
 			</p>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="map-themes"
-			>
-				Map Themes
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="map-themes">
+				<a href="#map-themes" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Map Themes</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
-					<p>Map theme sand and cliff normal maps require an inverted green channel to appear correctly.</p><p
-						class="mt-4"
-					>
-						The water normal map is animated ingame and constantly fades between a regular and an inverted
-						version.
+					<p>Map theme sand and cliff normal maps require an inverted green channel to appear correctly.</p><p class="mt-4">
+						The water normal map is animated ingame and constantly fades between a regular and an inverted version.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/normalmaps/themeig.png" target="_blank">
