--- a/src/pages/shader/rotors.astro
+++ b/src/pages/shader/rotors.astro
@@ -15,19 +15,19 @@ import { images } from '../../data/imageImports.js';
 		</h1>
 		<div class="content">
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
-				About
+				<a href="#about" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>About</a
+				>
 			</h2>
 			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						Unlike regular shaders, the rotors shader supports semi-transparency, therefore it can be used
-						for transparent glass, fake water, or anything else that requires semi-transparency.
+						Unlike regular shaders, the rotors shader supports semi-transparency, therefore it can be used for transparent
+						glass, fake water, or anything else that requires semi-transparency.
 					</p><p class="mt-4">
-						It's usually used for props, buildings, and building sub-meshes which are a part of a bigger
-						asset, such as a glass windows sub-building for a normal building.
-					</p><p class="mt-4">
-						This article assumes you are familiar with regular prop and building asset creation.
-					</p>
+						It's usually used for props, buildings, and building sub-meshes which are a part of a bigger asset, such as a glass
+						windows sub-building for a normal building.
+					</p><p class="mt-4">This article assumes you are familiar with regular prop and building asset creation.</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/shader/rotors-transparent.jpeg" target="_blank">
 						<Picture
@@ -42,40 +42,47 @@ import { images } from '../../data/imageImports.js';
 					><p class="explanation">Rotors shader used for glass and fake water.</p>
 				</div>
 			</div>
-			<h2
-				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
-				id="limitations"
-			>
-				Limitations
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="limitations">
+				<a
+					href="#limitations"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Limitations</a
+				>
 			</h2>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="lighting">
-				Lighting
+				<a href="#lighting" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Lighting</a
+				>
 			</h3>
 			<p class="mt-4">
-				Rotors shader doesn't receive shadows from other objects, meaning it will look unnaturally bright when
-				in the shadow. Also, it only receives illumination from the sun, therefore it will be black when facing
-				away from the sun, which is why it's recommended to use a dark diffuse texture.
+				Rotors shader doesn't receive shadows from other objects, meaning it will look unnaturally bright when in the shadow. Also,
+				it only receives illumination from the sun, therefore it will be black when facing away from the sun, which is why it's
+				recommended to use a dark diffuse texture.
 			</p>
 			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="shadows">
-				Shadows
+				<a href="#shadows" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Shadows</a
+				>
 			</h3>
 			<p class="mt-4">
-				The shadows for semi-transparent parts will not be semi-visible, they will only be fully visible when
-				the opacity is above 50% (128 on alpha map) and invisible below that.
+				The shadows for semi-transparent parts will not be semi-visible, they will only be fully visible when the opacity is above
+				50% (128 on alpha map) and invisible below that.
 			</p>
-			<h3
-				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
-				id="reversed-render-order"
-			>
-				Reversed Render Order
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="reversed-render-order">
+				<a
+					href="#reversed-render-order"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Reversed Render Order</a
+				>
 			</h3>
 			<p class="mt-4">
-				This means if you have multiple faces on top of each other, the furthest one will render on top of the
-				closest one. This is not very obvious if the object is highly transparent. If the object is split into
-				multiple props, buildings, or sub-meshes which are far enough apart then it won't have this problem.
+				This means if you have multiple faces on top of each other, the furthest one will render on top of the closest one. This is
+				not very obvious if the object is highly transparent. If the object is split into multiple props, buildings, or sub-meshes
+				which are far enough apart then it won't have this problem.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
-				Script
+				<a href="#script" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Script</a
+				>
 			</h2>
 			<p class="mt-4">
 				To change the shader of your prop, building, or sub-mesh to rotors, you need to run <Link
@@ -91,81 +98,72 @@ import { images } from '../../data/imageImports.js';
 				/> console <span class="key">F7</span>.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh">
-				Mesh
+				<a href="#mesh" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Mesh</a
+				>
 			</h2>
 			<p class="mt-4">
-				There's nothing different about the mesh compared to regular assets, but it's possible to use the vertex
-				color red channel to control the opacity, although for almost all cases using the alpha texture makes
-				more sense.
+				There's nothing different about the mesh compared to regular assets, but it's possible to use the vertex color red channel
+				to control the opacity, although for almost all cases using the alpha texture makes more sense.
 			</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
-				Textures
+				<a href="#textures" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Textures</a
+				>
 			</h2>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="diffuse"
-			>
-				Diffuse
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="diffuse">
+				<a href="#diffuse" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Diffuse</a
+				>
 			</h4>
 			<p class="mt-4">Works like any diffuse texture.</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="alpha"
-			>
-				Alpha
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="alpha">
+				<a href="#alpha" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Alpha</a
+				>
 			</h4>
-			<p class="mt-4">
-				Controls transparency, white is fully opaque, black is invisible, shades of gray are semi-transparent.
-			</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="color"
-			>
-				Color
+			<p class="mt-4">Controls transparency, white is fully opaque, black is invisible, shades of gray are semi-transparent.</p>
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="color">
+				<a href="#color" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Color</a
+				>
 			</h4>
 			<p class="mt-4">Rotors shader only uses the first color variation, so it's not very useful.</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="illumination"
-			>
-				Illumination
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="illumination">
+				<a
+					href="#illumination"
+					title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Illumination</a
+				>
 			</h4>
 			<p class="mt-4">
-				The illumination is unusual and looks different based on time of day. For buildings, remember to import
-				a black illumination map, as it will default to a light gray (192).
+				The illumination is unusual and looks different based on time of day. For buildings, remember to import a black illumination
+				map, as it will default to a light gray (192).
 			</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="normal"
-			>
-				Normal
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="normal">
+				<a href="#normal" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Normal</a
+				>
 			</h4>
 			<p class="mt-4">Works like any normal map.</p>
-			<h4
-				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
-				id="specular"
-			>
-				Specular
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="specular">
+				<a href="#specular" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Specular</a
+				>
 			</h4>
 			<p class="mt-4">Works like any specular map.</p>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="lod">
-				LOD
+				<a href="#lod" title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">LOD</a
+				>
 			</h2>
 			<p class="mt-4">The rotors shader doesn't work for LOD models.</p>
 			<div class="flex items-start justify-start gap-2 mt-6">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
-					class="w-8 h-8 text-hoverlink flex-shrink-0"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="w-6 h-6"
-				>
+					xml:space="preserve"
+					class="w-8 h-8 text-hoverlink flex-shrink-0 fill-hoverlink"
+					viewBox="0 0 32 32">
 					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"
+						d="M16 4C9.4 4 4 9.4 4 16s5.4 12 12 12 12-5.4 12-12S22.6 4 16 4zm0 22c-5.5 0-10-4.5-10-10S10.5 6 16 6s10 4.5 10 10-4.5 10-10 10zm0-12c-.6 0-1 .4-1 1v6c0 .6.4 1 1 1s1-.4 1-1v-6c0-.6-.4-1-1-1zm0-4c-.6 0-1 .4-1 1s.4 1 1 1 1-.4 1-1-.4-1-1-1z"
 					></path>
 				</svg>
 				<p class="italic">
@@ -180,11 +178,12 @@ import { images } from '../../data/imageImports.js';
 				</p>
 			</div>
 			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="examples">
-				Examples
+				<a href="#examples" title="Click to generate a direct link to this section in the browser's address bar for easy sharing."
+					>Examples</a
+				>
 			</h2>
 			<p class="mt-4">
-				You can download the source files of some example assets, which use rotors shader for some parts of the
-				asset.
+				You can download the source files of some example assets, which use rotors shader for some parts of the asset.
 			</p>
 			<div class="mt-4 content-download">
 				<Link
@@ -212,21 +211,16 @@ import { images } from '../../data/imageImports.js';
 			</div>
 		</div>
 		<!-- ?Video Section -->
-		<h2
-			id="relevant-videos"
-			class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
-		>
-			Relevant Videos
+		<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="relevant-videos">
+			<a
+				href="#relevant-videos"
+				title="Click to generate a direct link to this section in the browser's address bar for easy sharing.">Relevant Videos</a
+			>
 		</h2>
 		<ul class="text-lg mt-4 text-hit-gray-500 list-inside">
 			<li>
 				<h3 class="mt-4" id="rotors-shader">
-					<Link
-						href="https://youtube.com/watch?v=ELoMC1rWOSc"
-						theme="youtube"
-						text="Rotors Shader"
-						classes=""
-					/>
+					<Link href="https://youtube.com/watch?v=ELoMC1rWOSc" theme="youtube" text="Rotors Shader" classes="" />
 				</h3>
 			</li>
 		</ul>
